--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -10,6 +10,7 @@ env:
 
 permissions:
   contents: write # Allow writing to the repository
+  id-token: write # Required for OIDC token generation
 
 jobs:
   deploy:
